# gazebo-ros-actor-plugin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
config/skins/DoctorFemaleWalk/: model.config  model.sdf
config/skins/DoctorFemaleWalk/meshes/: DoctorFemaleWalk.dae
config/skins/FemaleVisitorWalk/: model.config  model.sdf
config/skins/FemaleVisitorWalk/meshes/: FemaleVisitorWalk.dae
config/skins/NurseFemaleWalk/: model.config  model.sdf
config/skins/NurseFemaleWalk/meshes/: NurseFemaleWalk.dae
config/skins/OpScrubsWalk/: model.config  model.sdf
config/skins/OpScrubsWalk/meshes/: OpScrubsWalk.dae
config/skins/PatientRollingWalker/: model.config  model.sdf
config/skins/PatientRollingWalker/meshes/: PatientRollingWalker.dae
config/skins/PatientWalkingCane/: model.config  model.sdf
config/skins/PatientWalkingCane/meshes/: PatientWalkingCane.dae
config/skins/VisitorKidWalk/: model.config  model.sdf
config/skins/VisitorKidWalk/meshes/: VisitorKidWalk.dae
config/worlds/: move_actor.world  velocity_follow.world
docker_scripts/: bashing_container.sh  launch_container.sh  stop_container.sh
include/gazebo_ros_actor_plugin/: command_actor.h  gazebo_ros_actor.h  gazebo_ros_actor_command.h  gazebo_ros_deviate_path_actor.h  gazebo_ros_path_follow_actor.h  gazebo_ros_robot_follow_actor.h  gazebo_ros_temporary_stop_actor.h
launch/: sim.launch
scripts/: path_publisher.py
src/: command_actor.cpp  gazebo_ros_actor.cpp  gazebo_ros_actor_command.cpp  gazebo_ros_deviate_path_actor.cpp  gazebo_ros_path_follow_actor.cpp  gazebo_ros_robot_follow_actor.cpp  gazebo_ros_temporary_stop_actor.cpp
