<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_actor_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_ros_actor_plugin package</description>
  <maintainer email="shtseng@todo.todo">shtseng</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  
</package>
