<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_actor_plugin</name>
  <version>0.0.0</version>
  <description>Gazebo 11 plugin to control actors using either position or velocity commands</description>
  <maintainer email="animesh@blackcoffeerobotics.com">Animesh Singhal</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  
</package>
